<resources>
    <string name="about_comments">Keep track of your shopping items with OI Shopping List.</string>
    <string name="about_translators">translator-credits</string>
    <string name="add">Add</string>
    <string name="app_name">OI Shopping List</string>
    <string name="ask_edit_item">Edit item</string>
    <string name="ask_new_list">Enter name of new shopping list</string>
    <string name="ask_new_store">Enter new store name</string>
    <string name="ask_rename_list">Rename shopping list</string>
    <string name="cancel">Cancel</string>
    <string name="clean_up_list">Clean up list</string>
    <string name="confirm_delete_list">Do you really want to delete this shopping list?</string>
    <string name="confirm_delete_store">Do you really want to delete this store?</string>
    <string name="delete">Delete</string>
    <string name="delete_item_confirm">Are you sure you want to permanently delete this item?</string>
    <string name="delete_list">Delete list</string>
    <string name="email_not_available">No application available for sending.</string>
    <string name="empty" />
    <string name="empty_list_not_sent">Empty list not sent.</string>
    <string name="get_more_themes">Get more themes</string>
    <string name="has_note">Has Note</string>
    <string name="item">Item</string>
    <string name="item_stores_activity_label">Edit Item Stores</string>
    <string name="item_stores_title">%s - Stores</string>
    <string name="label_select_action">Select action:</string>
    <string name="label_select_list">Select list:</string>
    <string name="list">List</string>
    <string name="mark_all_items">Mark all items</string>
    <string name="menu_auto_add">Auto add</string>
    <string name="menu_copy_item">Copy item</string>
    <string name="menu_delete_item">Delete item permanently</string>
    <string name="menu_delete_store">Delete store</string>
    <string name="menu_edit_item">Edit item</string>
    <string name="menu_item_stores">Stores...</string>
    <string name="menu_mark_item">Mark item</string>
    <string name="menu_move_item">Move item to other list</string>
    <string name="menu_pick_items">Pick items</string>
    <string name="menu_remove_item">Remove item from list</string>
    <string name="menu_rename_store">Rename store</string>
    <string name="menu_start_shopping">Shopping</string>
    <string name="my_shopping_list">My shopping list</string>
    <string name="new_item">New item</string>
    <string name="new_list">New list</string>
    <string name="new_list_hint">e.g. wishlist, family list</string>
    <string name="no_items_available">No items available</string>
    <string name="no_items_marked">No items are marked as crossed out.</string>
    <string name="no_shopping_provider">Error while accessing shopping lists.</string>
    <string name="no_stores_available">No stores available for this list</string>
    <string name="no_tags_available">No tags available for this list</string>
    <string name="note">Note</string>
    <string name="notepad">OI Notepad</string>
    <string name="notepad_not_available">Editing item notes requires OI Notepad.</string>
    <string name="oi_distribution_about">About</string>
    <string name="oi_distribution_aboutapp">OI About</string>
    <string name="oi_distribution_aboutapp_get">Get OI About</string>
    <string name="oi_distribution_aboutapp_not_available">No compatible extension available to display full info (contact, credits, license).</string>
    <string name="oi_distribution_app_name">OI Distribution Library</string>
    <string name="oi_distribution_barcodescanner">Barcode OI Plugin</string>
    <string name="oi_distribution_barcodescanner_not_available">No compatible barcode scanner is available.</string>
    <string name="oi_distribution_download_market">Market download</string>
    <string name="ok">OK</string>
    <string name="preference_add_for_barcode">Barcode Scanner</string>
    <string name="preference_add_for_barcode_summary">Long press the Add button to start Barcode OI Plugin (if installed).</string>
    <string name="preference_addons">Add-ons</string>
    <string name="preference_advanced">Advanced settings</string>
    <string name="preference_advanced_summary">Additional settings.</string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_application">Application settings</string>
    <string name="preference_capitalization_dialog_title">Choose capitalization</string>
    <string name="preference_capitalization_summary">Automatic capitalization of entries</string>
    <string name="preference_capitalization_title">Capitalization</string>
    <string name="preference_developer_extensions_summary">Get extensions from the OpenIntents homepage.</string>
    <string name="preference_developer_themes_summary">Get themes from the OpenIntents homepage.</string>
    <string name="preference_extensions">Extensions</string>
    <string name="preference_fastscroll_summary">Scroll handle appears when scrolling 35 items or more.</string>
    <string name="preference_fastscroll_title">Fast Scrolling</string>
    <string name="preference_fontsize">Font size</string>
    <string name="preference_fontsize_dialog_title">Choose font size</string>
    <string name="preference_fontsize_summary">Change font size</string>
    <string name="preference_general">General</string>
    <string name="preference_get_addons">Get new add-ons</string>
    <string name="preference_get_addons_summary">Search for extensions and themes online.</string>
    <string name="preference_get_developer_addons">Get add-ons from OpenIntents</string>
    <string name="preference_get_market_addons">Get add-ons from Market</string>
    <string name="preference_hidechecked_summary">Immediately hide items checked off.</string>
    <string name="preference_hidechecked_title">Hide checked items</string>
    <string name="preference_market_extensions_summary">Search for extensions at Android Market.</string>
    <string name="preference_market_themes_summary">Search for themes at Android Market.</string>
    <string name="preference_orientation">Orientation</string>
    <string name="preference_orientation_dialog_title">Choose orientation</string>
    <string name="preference_orientation_summary">Change orientation</string>
    <string name="preference_perstoreprice_summary">Keep track of separate prices for each item at each store.</string>
    <string name="preference_perstoreprice_title">Track per-store prices</string>
    <string name="preference_pickitems">Pick Items</string>
    <string name="preference_pickitemsinlist_off_summary">Add items to list using a dedicated dialog</string>
    <string name="preference_pickitemsinlist_on_summary">Switch main list to edit mode to re-add existing items</string>
    <string name="preference_pickitemsinlist_title">Pick items directly in list</string>
    <string name="preference_prio_subtotal">Subtotal by priority</string>
    <string name="preference_prioritytotal_dialog_title">Subtotal by priority</string>
    <string name="preference_prioritytotal_summary">No subtotal by priority shown.</string>
    <string name="preference_prioritytotal_title">Subtotal by priority</string>
    <string name="preference_priosubtotalchecked_off_summary">Subtotal by priority excludes checked items</string>
    <string name="preference_priosubtotalchecked_on_summary">Subtotal by priority includes checked items</string>
    <string name="preference_priosubtotalchecked_title">Include checked items</string>
    <string name="preference_quickedit">Quick Edit Mode</string>
    <string name="preference_quickedit_off_summary">Touching Priority or Quantity values summons the Edit Item dialog.</string>
    <string name="preference_quickedit_on_summary">Touch Priority or Quantity values for a menu of common values.</string>
    <string name="preference_reset_all_settings">Reset all settings</string>
    <string name="preference_reset_quantity">Reset Quantity</string>
    <string name="preference_reset_quantity_summary">Resets the quantity when adding items again.</string>
    <string name="preference_samesortforpick_off_summary">Sort order for Pick Items mode can be chosen separately.</string>
    <string name="preference_samesortforpick_on_summary">Items are sorted in Pick Items mode just as in Shopping mode.</string>
    <string name="preference_samesortforpick_title">Always same sort order</string>
    <string name="preference_screenlock_summary">Prevents the screen to be locked when checked.</string>
    <string name="preference_screenlock_title">Disable screen lock</string>
    <string name="preference_shake_summary">Shake the phone to clean up the list.</string>
    <string name="preference_shake_title">Shake to clean up</string>
    <string name="preference_showprice_summary">Shown as extra column in list.</string>
    <string name="preference_showprice_title">Show price</string>
    <string name="preference_showpriority_summary">Shown as extra column in list.</string>
    <string name="preference_showpriority_title">Show priority</string>
    <string name="preference_showquantity_summary">Shown as extra column in list.</string>
    <string name="preference_showquantity_title">Show quantity</string>
    <string name="preference_showtags_summary">Shown as extra column in list.</string>
    <string name="preference_showtags_title">Show tags</string>
    <string name="preference_showunits_summary">Shown as extra column in list.</string>
    <string name="preference_showunits_title">Show units</string>
    <string name="preference_sortorder_dialog_title">Choose sort order</string>
    <string name="preference_sortorder_for_pick_dialog_title">Choose sort order for Pick Items mode</string>
    <string name="preference_sortorder_for_pick_summary">Change sort order of list items in Pick Items mode.</string>
    <string name="preference_sortorder_for_pick_title">Sort order - Pick Items</string>
    <string name="preference_sortorder_for_shopping_lists">Sort order - Shopping Lists</string>
    <string name="preference_sortorder_for_slists_dialog_title">Choose sort order for shopping lists</string>
    <string name="preference_sortorder_for_slists_summary">Change sort order of shopping lists.</string>
    <string name="preference_sortorder_summary">Change sort order of list items</string>
    <string name="preference_sortorder_title">Sort order</string>
    <string name="preference_themes">Themes</string>
    <string name="preference_usefilters_summary">Lists can be filtered by tags or stores.</string>
    <string name="preference_usefilters_title">Filters</string>
    <string name="price">Price</string>
    <string name="priority">Priority</string>
    <string name="quantity">Quantity</string>
    <string name="stores">Stores</string>
    <string name="tags">Tags</string>
    <string name="units">Units</string>
    <string name="add_location_alert_description">This shopping list can be opened automatically when you reach the following location.</string>
    <string name="pick_location">Pick a location</string>
    <string name="preference_developer_extensions_link">http://www.openintents.org/en/shoppinglist#extensions</string>
    <string name="preference_developer_themes_link">http://www.openintents.org/en/shoppinglist#themes</string>
    <string name="preference_market_extensions_link">market://search?q=extension oi shopping list</string>
    <string name="preference_market_themes_link">market://search?q=theme oi shopping list</string>
    <string name="shopping_name_description">Enter a unique identifier for this list.</string>
    <string name="shopping_share_description">"Insert the email addresses of the contacts separated by comma with who you want to share this list (use 'local/new_id' to test locally)."</string>
    <string name="view_alerts">View list of alerts</string>
</resources>