<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_application">
        <ListPreference android:entries="@array/preference_fontsize_entries" android:title="@string/preference_fontsize" android:key="fontsize" android:summary="@string/preference_fontsize_summary" android:defaultValue="2" android:dialogTitle="@string/preference_fontsize_dialog_title" android:entryValues="@array/preference_fontsize_entryvalues" />
        <ListPreference android:entries="@array/preference_sortorder_entries" android:title="@string/preference_sortorder_title" android:key="sortorder" android:summary="@string/preference_sortorder_summary" android:defaultValue="3" android:dialogTitle="@string/preference_sortorder_dialog_title" android:entryValues="@array/preference_sortorder_entryvalues" />
        <PreferenceScreen android:title="@string/preference_advanced" android:key="preference_screen_advanced" android:summary="@string/preference_advanced_summary">
            <PreferenceCategory android:title="@string/preference_general">
                <ListPreference android:entries="@array/preference_capitalization_entries" android:title="@string/preference_capitalization_title" android:key="capitalization" android:summary="@string/preference_capitalization_summary" android:defaultValue="1" android:dialogTitle="@string/preference_capitalization_dialog_title" android:entryValues="@array/preference_capitalization_entryvalues" />
                <ListPreference android:entries="@array/preference_orientation_entries" android:title="@string/preference_orientation" android:key="orientation" android:summary="@string/preference_orientation_summary" android:defaultValue="-1" android:dialogTitle="@string/preference_orientation_dialog_title" android:entryValues="@array/preference_orientation_entryvalues" />
                <CheckBoxPreference android:title="@string/preference_hidechecked_title" android:key="hidechecked" android:summary="@string/preference_hidechecked_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/preference_fastscroll_title" android:key="fastscroll" android:summary="@string/preference_fastscroll_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/preference_shake_title" android:key="shake" android:summary="@string/preference_shake_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/preference_perstoreprice_title" android:key="perstoreprices" android:summary="@string/preference_perstoreprice_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/preference_add_for_barcode" android:key="addforbarcode" android:summary="@string/preference_add_for_barcode_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/preference_screenlock_title" android:key="screenlock" android:summary="@string/preference_screenlock_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/preference_quickedit" android:key="quickedit" android:summaryOn="@string/preference_quickedit_on_summary" android:summaryOff="@string/preference_quickedit_off_summary" />
                <CheckBoxPreference android:title="@string/preference_usefilters_title" android:key="use_filters" android:summary="@string/preference_usefilters_summary" android:defaultValue="false" />
                <CheckBoxPreference android:title="@string/preference_reset_quantity" android:key="resetquantity" android:summary="@string/preference_reset_quantity_summary" android:defaultValue="false" />
                <Preference android:title="@string/preference_reset_all_settings" android:key="reset_all_settings" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preference_appearance">
                <CheckBoxPreference android:title="@string/preference_showprice_title" android:key="showprice" android:summary="@string/preference_showprice_summary" android:defaultValue="true" />
                <CheckBoxPreference android:title="@string/preference_showtags_title" android:key="showtags" android:summary="@string/preference_showtags_summary" android:defaultValue="true" />\
<CheckBoxPreference android:title="@string/preference_showunits_title" android:key="showunits" android:summary="@string/preference_showunits_summary" android:defaultValue="true" />
                <CheckBoxPreference android:title="@string/preference_showquantity_title" android:key="showquantity" android:summary="@string/preference_showquantity_summary" android:defaultValue="true" />
                <CheckBoxPreference android:title="@string/preference_showpriority_title" android:key="showpriority" android:summary="@string/preference_showpriority_summary" android:defaultValue="true" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preference_pickitems">
                <CheckBoxPreference android:title="@string/preference_samesortforpick_title" android:key="samesortforpick" android:defaultValue="false" android:summaryOn="@string/preference_samesortforpick_on_summary" android:summaryOff="@string/preference_samesortforpick_off_summary" />
                <ListPreference android:entries="@array/preference_sortorder_entries" android:title="@string/preference_sortorder_for_pick_title" android:key="sortorderForPickItems" android:summary="@string/preference_sortorder_for_pick_summary" android:defaultValue="1" android:dialogTitle="@string/preference_sortorder_for_pick_dialog_title" android:entryValues="@array/preference_sortorder_entryvalues" />
                <CheckBoxPreference android:title="@string/preference_pickitemsinlist_title" android:key="pickitemsinlist" android:defaultValue="false" android:summaryOn="@string/preference_pickitemsinlist_on_summary" android:summaryOff="@string/preference_pickitemsinlist_off_summary" />
                <ListPreference android:entries="@array/preference_sortorder_slists" android:title="@string/preference_sortorder_for_shopping_lists" android:key="sortorderForShoppingLists" android:summary="@string/preference_sortorder_for_slists_summary" android:defaultValue="0" android:dialogTitle="@string/preference_sortorder_for_slists_dialog_title" android:entryValues="@array/preference_sortorder_slistsvalues" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preference_prio_subtotal">
                <ListPreference android:entries="@array/preference_prioritytotal_entries" android:title="@string/preference_prioritytotal_title" android:key="priority_subtotal_threshold" android:summary="@string/preference_prioritytotal_summary" android:defaultValue="0" android:dialogTitle="@string/preference_prioritytotal_dialog_title" android:entryValues="@array/preference_prioritytotal_entryvalues" />
                <CheckBoxPreference android:title="@string/preference_priosubtotalchecked_title" android:key="priosubtotal_includes_checked" android:defaultValue="true" android:summaryOn="@string/preference_priosubtotalchecked_on_summary" android:summaryOff="@string/preference_priosubtotalchecked_off_summary" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_addons">
        <PreferenceScreen android:title="@string/preference_get_addons" android:key="preference_screen_addons" android:summary="@string/preference_get_addons_summary">
            <PreferenceCategory android:title="@string/preference_get_market_addons">
                <PreferenceScreen android:title="@string/preference_extensions" android:key="preference_market_extensions" android:summary="@string/preference_market_extensions_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_market_extensions_link" />
                </PreferenceScreen>
                <PreferenceScreen android:title="@string/preference_themes" android:key="preference_market_themes" android:summary="@string/preference_market_themes_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_market_themes_link" />
                </PreferenceScreen>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preference_get_developer_addons">
                <PreferenceScreen android:title="@string/preference_extensions" android:summary="@string/preference_developer_extensions_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_developer_extensions_link" />
                </PreferenceScreen>
                <PreferenceScreen android:title="@string/preference_themes" android:summary="@string/preference_developer_themes_summary">
                    <intent android:action="android.intent.action.VIEW" android:data="@string/preference_developer_themes_link" />
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>