<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@android:drawable/ic_menu_share" android:layout_width="48.0dip" android:layout_height="48.0dip" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/shopping_name_description" />
    </LinearLayout>
    <EditText android:id="@id/share_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:capitalize="sentences" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/shopping_share_description" />
    <EditText android:id="@id/contacts" android:layout_width="fill_parent" android:layout_height="wrap_content" android:capitalize="sentences" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip">
        <Button android:id="@id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:layout_weight="1.0" android:visible="false" />
        <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>