<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/edittext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/item" android:inputType="text" />
        <LinearLayout android:orientation="horizontal" android:id="@id/quantity_and_price" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/edittext">
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                <TextView android:id="@id/labeleditquantity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/quantity" android:layout_weight="1.0" />
                <EditText android:id="@id/editquantity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_below="@id/labeleditquantity" android:inputType="numberDecimal" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                <TextView android:id="@id/labeleditunits" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/units" android:layout_weight="1.0" />
                <AutoCompleteTextView android:id="@id/editunits" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:completionThreshold="1" android:layout_below="@id/labeleditunits" android:inputType="text" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:id="@id/labeleditprice" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/price" />
                <EditText android:id="@id/editprice" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="0.00" android:singleLine="true" android:numeric="decimal|signed" android:layout_below="@id/labeleditprice" />
                <Button android:id="@id/pricestore" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_item_stores" android:singleLine="true" android:layout_below="@id/labeleditprice" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:id="@id/labeledittag" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tags" android:layout_weight="1.0" android:layout_below="@id/quantity_and_price" />
        <MultiAutoCompleteTextView android:id="@id/edittags" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/tags" android:singleLine="true" android:layout_below="@id/labeledittag" />
        <LinearLayout android:orientation="horizontal" android:id="@id/priority_and_note" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/edittags">
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                <TextView android:id="@id/labeleditpriority" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/priority" android:layout_weight="1.0" />
                <EditText android:id="@id/editpriority" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_below="@id/labeleditpriority" android:inputType="number" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                <TextView android:id="@id/labeleditnote" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/note" android:layout_weight="1.0" />
                <ImageButton android:id="@id/note" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_launcher_notepad_small" android:scaleType="centerInside" android:layout_below="@id/labeleditnote" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>