<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <org.openintents.shopping.ui.widget.StoreListView android:id="@id/list_stores" android:layout_width="fill_parent" android:layout_height="0.0dip" android:cacheColorHint="#00000000" android:layout_weight="1.0" />
    <LinearLayout android:orientation="horizontal" android:id="@id/add_panel" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/button_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" />
        <Button android:id="@id/button_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        <Button android:id="@id/button_add_store" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/add" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>