<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@android:drawable/ic_menu_mylocation" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="1.0dip" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/add_location_alert_description" />
    </LinearLayout>
    <Button android:id="@id/picklocation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="1.0dip" android:text="@string/pick_location" />
    <TextView android:id="@id/alert_added_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:id="@id/location" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:id="@id/tags" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <Button android:id="@id/viewalerts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/view_alerts" />
</LinearLayout>